moved loanshark page
updated links to page after move

--- a/LandingPage.html
+++ b/LandingPage.html
@@ -31,7 +31,7 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link center" href="./LoanShark.html">The app</a>
+              <a class="nav-link center" href="./public/LoanShark.html">The app</a>
               <a class="nav-link active"  href="https://github.com/WixkedLuck/Loan-Shark" target="_blank">Code</a>
               
             </div>
