--- a/public/LoanShark.html
+++ b/public/LoanShark.html
@@ -1,12 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loan Shark</title>
+    <script src="https://kit.fontawesome.com/ff0398e8e5.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="./stylesheets/style.css">
+
 </head>
+
 <body>
-    <h1>Hello</h1>
+    <nav class="navbar navbar-expand-lg ">
+        <div class="container-fluid">
+            <img src="https://img.icons8.com/material-outlined/48/FFFFFF/shark.png"/>
+            <h1 class="navbar-brand animate__animated animate__bounce" href="#"> LoanShark</h1>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                    <a class="nav-link onpage" >The app</a>
+                    <a class="nav-link active" href="https://github.com/WixkedLuck/Loan-Shark" target="_blank">Code</a>
+
+                </div>
+            </div>
+        </div>
+    </nav>
+    <h1 class="text-center container header glass">Loan Shark <span><img src="https://img.icons8.com/material-outlined/48/FFFFFF/shark.png"/></span></h1>
+    <div class="container ">
+        <div class="row ">
+            <div class="col glass">
+                <h1 class="underline">Enter in your loan details:</h1>
+                <form >
+                    <div>
+                        <span class="input-group-text" id="basic-addon">$
+                        <input type="number" id="loan" placeholder="Loan Amount"></span>
+                    </div>
+                    <div>
+                        <span class="input-group-text " id="basic-addon">%
+                        <input type="number" id="interest" placeholder="Interest Rate"></span>
+                    </div>
+                    <div>
+
+                   <span class="input-group-text"> <input type="number" id="term" placeholder="Term (Months)"></span>
+                    </div>
+                    <button type="button" id="submit">Calculate it!</button>
+                </form>
+
+            </div>
+            <div class="col glass">
+               <h1 class="underline">Your Monthly Payments:</h1>
+               <h1 class="underline">Amortization Schedule:</h1>
+            </div>
+        </div>
+        <script src="./javascript/calculate.js"></script>
+        <div id="monthly">
+
+        </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
+
 </html>
