--- a/public/LoanShark.html
+++ b/public/LoanShark.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+    <!-- create navbar -->
     <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
             <img src="https://img.icons8.com/material-outlined/48/FFFFFF/shark.png"/>
@@ -35,9 +36,13 @@
             </div>
         </div>
     </nav>
+    <!-- create centered title -->
     <h1 class="text-center container header glass">Loan Shark <span><img src="https://img.icons8.com/material-outlined/48/FFFFFF/shark.png"/></span></h1>
+    <!-- create a bootstrap container  -->
     <div class="container ">
+       
         <div class="row ">
+             <!-- left side of container  -->
             <div class="col glass">
                 <h1 class="underline">Enter in your loan details:</h1>
                 <form >
@@ -57,15 +62,23 @@
                 </form>
 
             </div>
+            <!-- right side of container  -->
             <div class="col glass">
                <h1 class="underline">Your Monthly Payments:</h1>
+               <div id="loan_info" class="form-group mt-1">
+
+               </div>
                <h1 class="underline">Amortization Schedule:</h1>
+               <div id="Schedule">
+                <!-- monthly payments go here  -->
+               </div>
             </div>
         </div>
-        <script src="./javascript/calculate.js"></script>
+        
         <div id="monthly">
-
+            <!-- table details go here  -->
         </div>
+        <script src="./javascript/calculate.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 
