fixed UI problem
noticed the % symbol was on the wrong size of the text box input

--- a/public/LoanShark.html
+++ b/public/LoanShark.html
@@ -47,12 +47,12 @@
                 <h1 class="underline">Enter in your loan details:</h1>
                 <form >
                     <div>
-                        <span class="input-group-text" id="basic-addon">$
+                        <span class="input-group-text" id="basic-addon"><strong>$</strong>
                         <input type="number" id="loan" placeholder="Loan Amount"></span>
                     </div>
                     <div>
-                        <span class="input-group-text " id="basic-addon">%
-                        <input type="number" id="interest" placeholder="Interest Rate"></span>
+                        <span class="input-group-text " id="basic-addon">
+                        <input type="number" id="interest" placeholder="Interest Rate"> <strong>%</strong></span>
                     </div>
                     <div>
 
