install prism.js
added a page to display code and added files to go with prism.js

--- a/public/LoanShark.html
+++ b/public/LoanShark.html
@@ -30,7 +30,7 @@
                 <div class="navbar-nav">
                     <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                     <a class="nav-link onpage" >The app</a>
-                    <a class="nav-link active" href="https://github.com/WixkedLuck/Loan-Shark" target="_blank">Code</a>
+                    <a class="nav-link active" href="../public/pages/code.html" >Code</a>
 
                 </div>
             </div>
