--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="navbar-nav">
               <a class="nav-link onpage"  >Home</a>
               <a class="nav-link active" href="./public/LoanShark.html">The app</a>
-              <a class="nav-link active"  href="https://github.com/WixkedLuck/Loan-Shark" target="_blank">Code</a>
+              <a class="nav-link active"  href="./public/pages/code.html" >Code</a>
              
             </div>
             
